--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,40 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_with_postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.name=springboot_with_postgres
+
+server.port=8989
+
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# run in dev to see stats
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# log query that is slower than 2 milliseconds
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=2
+
+# Logging
+logging.level.com.folautech=DEBUG
+logging.level.org.springframework.web=WARN
+logging.level.com.amazon=WARN
+# hibernate
+logging.level.org.hibernate.stat=DEBUG
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+#logging.level.com.zaxxer.hikari=TRACE
+#logging.level.org.hibernate=TRACE
+#logging.level.org.apache=trace
+#logging.level.org.apache.catalina.valves.RemoteIpValve=DEBUG
+#logging.level.org.hibernate.resource.jdbc.internal.ResourceRegistryStandardImpl=TRACE
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+#logging.level.com.zaxxer.hikari=TRACE
