--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.name=springboot_with_postgres
 
 server.port=8989
 
-
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
@@ -15,6 +14,7 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
 # run in dev to see stats
 spring.jpa.properties.hibernate.generate_statistics=true
